kubernetes-networks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    component: homework
    app: nginx
  namespace: homework
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      component: homework
      app: nginx
  template:
    metadata:
      labels:
        component: homework
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        command: [nginx-debug, '-g', 'daemon off;']
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/homework.conf
          subPath: homework.conf
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        workingDir: /homework
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -fv /homework/homepage/index.html"]
        readinessProbe:
          httpGet:
            path: /homepage/index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 360
      nodeSelector:
        workload: production
      dnsPolicy: Default
      volumes:
      - name: homework-volume
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config-homework
