kubernetes-networks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: homework
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /homepage/$1
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8888
